--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
               </a>
             </div>
             <div class="card">
+              <a href="" target="_blank" class="card-title">Html & Css - This page :)
+              </a>
+            </div>
+            <div class="card">
               <a href="" target="_blank" class="card-title">Android - Library for resources on demand - Pomu
               </a>
             </div>
@@ -224,7 +228,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="" target="_blank" class="card-title">Improve more at Rails
+              <a href="" target="_blank" class="card-title">Learn Angular js / Get better at front end web
               </a>
             </div>
             <div class="card"> <a href="" target="_blank" class="card-title">More java and android (never is enough!)</a>
@@ -238,6 +242,10 @@
           <div class="card-list">
             <div class="card">
               <a href="" target="_blank" class="card-title">Play the guitar better
+              </a>
+            </div>
+            <div class="card">
+              <a href="" target="_blank" class="card-title">Improve more at Rails
               </a>
             </div>
             <div class="card">
@@ -265,6 +273,10 @@
               </div>
               <div class="card">
                 <a href="" target="_blank" class="card-title">Reactive programming
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">Aspect Oriented Programming / AspectJ / Spring
                 </a>
               </div>
               <div class="card">
@@ -324,6 +336,10 @@
                 </a>
               </div>
               <div class="card">
+                <a href="" target="_blank" class="card-title">Makefile / CMake / Gradle / Ant
+                </a>
+              </div>
+              <div class="card">
                 <a href="" target="_blank" class="card-title">VIPER pattern user. MVP / MVC / MVVM / among others
                 </a>
               </div>
@@ -332,11 +348,19 @@
                 </a>
               </div>
               <div class="card">
-                <a href="" target="_blank" class="card-title">Concurrency perfectionist (threading / pthreads / locks / conditions / futures / starvation / deadlocks / double check if / blablabla)
+                <a href="" target="_blank" class="card-title">Concurrency (threading / pthreads / locks / conditionals / futures / starvation / deadlocks / double check if / among others)
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">SigC / SigC++
                 </a>
               </div>
               <div class="card">
                 <a href="" target="_blank" class="card-title">Cookies
+                </a>
+              </div>
+              <div class="card">
+                <a href="" target="_blank" class="card-title">Android SDK
                 </a>
               </div>
               <div class="card">
@@ -368,7 +392,7 @@
                 </a>
               </div>
               <div class="card">
-                <a href="" target="_blank" class="card-title">Bytecode manipulation / Dexing / Hotcoding
+                <a href="" target="_blank" class="card-title">Bytecode manipulation / Dexing / Hotcoding / Hotswapping
                 </a>
               </div>
               <div class="card">
