--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
       <link rel="icon" href="/icons/favicon.ico"/>
       <link rel="shortcut icon" href="/icons/favicon.ico"/>
       <title>Join the Empire</title>
+      <script src="index.js"></script>
   </head>
 
-  <script src="index.js"></script>
-  
   <body>
     <div id="main">
       <div class="header">
@@ -48,7 +47,7 @@
           <div class="list-header">
             <h2 class="list-title">Done</h2>
           </div>
-          <div class="card-list">
+          <div id="card-list" class="mousescroll">
             <div class="card"> <a href="" target="_blank" class="card-title">Graduate from school Carmen Arriola de Marin with title of "Bachillerato en Produccion de Bienes y Servicios</a>
             </div>
             <div class="card"> <a href="" target="_blank" class="card-title">Play basketball 15 years</a>
@@ -72,7 +71,7 @@
           <div class="list-header">
             <h2 class="list-title">Accomplishments</h2>
           </div>
-          <div class="card-list">
+          <div id="card-list" class="mousescroll">
             <div class="card">
               <a href="" target="_blank" class="card-title">Android - MercadoLibre's frontends and backends - MercadoLibre
               </a>
@@ -191,7 +190,7 @@
           <div class="list-header">
             <h2 class="list-title">Backlog</h2>
           </div>
-          <div class="card-list">
+          <div id="card-list" class="mousescroll">
             <div class="card"> <a href="" target="_blank" class="card-title">Speak Japanesse fluently</a>
             </div>
             <div class="card"> <a href="" target="_blank" class="card-title">Watch LOTR 100 times</a>
@@ -212,7 +211,7 @@
           <div class="list-header">
             <h2 class="list-title">Current Sprint</h2>
           </div>
-          <div class="card-list">
+          <div id="card-list" class="mousescroll">
             <div class="card">
               <a href="" target="_blank" class="card-title">Working as Software Engineer at MercadoLibre
               </a>
@@ -241,7 +240,7 @@
           <div class="list-header">
             <h2 class="list-title">On hold</h2>
           </div>
-          <div class="card-list">
+          <div id="card-list" class="mousescroll">
             <div class="card">
               <a href="" target="_blank" class="card-title">Play the guitar better
               </a>
@@ -260,7 +259,7 @@
             <div class="list-header">
               <h2 class="list-title">Skills</h2>
             </div>
-            <div class="card-list">
+            <div id="card-list" class="mousescroll">
               <div class="card">
                 <a href="" target="_blank" class="card-title">Object oriented programming
                 </a>
