--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
       <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="index.css" />
-      <link rel="icon" href="/icons/favicon.ico"/>
-      <link rel="shortcut icon" href="/icons/favicon.ico"/>
+      <link rel="icon" href="/icons/ic_launcher.ico"/>
+      <link rel="shortcut icon" href="/icons/ic_launcher.ico"/>
       <title>Join the Empire</title>
       <script src="index.js"></script>
   </head>
@@ -12,7 +12,7 @@
   <body>
     <div id="main">
       <div class="header">
-        <img class="profile-thumbnail" src="icons/my_thumbnail.jpg" alt="my_thumbnail"/>
+        <img class="profile-thumbnail" src="icons/profile/ic_profile.jpg"/>
         <div class="header-information">
           <h1 class="header-title">Santiago Aguilera</h1>
           <h3 class="header-description">23 year-old. Buenos Aires, Argentina.</h3>
@@ -22,19 +22,19 @@
         <div class="header-contact-container">
           <a href="https://www.github.com/saantiaguilera">
             <div class="header-contact">
-              <img class="header-contact-image" src="icons/github.png" alt="github"/>
+              <img class="header-contact-image" src="icons/contact/ic_contact_github.png"/>
               <span class="header-contact-name">Github</span>
             </div>
           </a>
           <a href="https://www.linkedin.com/in/santiago-aguilera-55202255">
           <div class="header-contact">
-            <img class="header-contact-image" src="icons/linkedin.png" alt="githusb"/>
+            <img class="header-contact-image" src="icons/contact/ic_contact_linkedin.png"/>
             <span class="header-contact-name">LinkedIn</span>
           </div>
           </a>
           <a href="mailto:marquito.santi@gmail.com?Subject=Job%20offer">
           <div>
-            <img class="header-contact-image" src="icons/gmail.png" alt="githubd"/>
+            <img class="header-contact-image" src="icons/contact/ic_contact_gmail.png"/>
             <span class="header-contact-name">Mail me!</span>
           </div>
           </a>
